# GoTools

./: CMakeLists.txt
compositemodel/app/: computeClosestDistanceFromSurfaceModel.C  createFromg2.C  readGiDPointsCAxMan.C  readg22.C
compositemodel/examples/: setBdCondandMaterials.C
compositemodel/src/: Body.C  CompositeModelFileHandler.C
lrsplines2D/app/: generateOverloading.C  plotLRAndMSSupport.C  plotLRBSplineSupport.C
lrsplines2D/src/: LRSplinePlotUtils.C
tessellation/: CMakeLists.txt  cmake_install.cmake  notes.org  operatortest.C  todo.org
tessellation/app/: curve_optim_test.C  debug_surf_tess.C  eigentest.C  krull.C  lu_test.C  make_bounded_surface_example.C  polyhedron_tesselation_test.C  read_model.C  sample_bounded_surface.C  simple_volume_tesselation_example.C  simple_volume_tessellation_example.C  tesselation_test.C  test_distribute.C  test_tesselate_utils.C  test_tritools.C  tmp_test.C  ttl_test.C
tessellation/data/: pct12108_fem_1couple_model_0_simplified_trim3.g22  trimmed_cube2_tri.g22  trimmed_cube_graded.g22  trimmed_cube_tri.g22
tessellation/deprecated/: basic_intersections_impl.h  interpoint_distances.C_deprecated
tessellation/include/: BoundedVolumeDescription.h  ClippedDomain2D.h  GoParametricTesselableVolume.h  GoParametricTessellableVolume.h  MeshXD.h  ParametricObjectEnergyFunctor.h  ParametricObjectEnergyFunctor_impl.h  SimplePolyhedronTesselation.h  TesselableVolume.h  TessellableVolume.h  TriangleOctTree.h  basic_intersections.h  clip_grid.h  common_defs.h  debug_tesselate.h  disable_warnings.h  distance_energy.h  distance_function.h  distributeND.h  find_root.h  fit_points_to_plane.h  fit_points_to_plane_impl.h  interpoint_distances.h  interpoint_distances_impl.h  lu.h  make_spacing_funs.h  parametric_object_energies.h  polyhedral_energies.h  tesselate_curve.h  tesselate_debug.h  tesselate_parametric_volume.h  tesselate_polyhedron.h  tesselate_surface.h  tesselate_utils.h  tesselate_utils_impl.h  tessellate_parametric_volume.h  tessellate_polyhedron.h  tessellate_utils.h  tessellate_utils_impl.h  triangulate_domain.h  (+1 more)
tessellation/matlab/: UnitSquare2DTest.m  angle.m  cgrad2D.m  distmat.m  energy.m  energy_function_factory.m  euclidian_distance.m  interpoint_energy.m  mirror_points.m  play_hist.m  plot_cellvolume.m  plot_edges3.m  plot_faces3.m  plot_matrix.m  plot_tets.m  plot_tri.m  polygon_area.m  polygon_energy.m  segment_neighbor_points.m  tessellatePolygon.m  tessellate_edge.m  tessellate_face.m  test_angle.m  test_segment_neighbor_points.m  testscript.m
tessellation/matlab/deprecated/: boundary_point_energy.m  internal_point_energy.m  mirror_point_energy.m
tessellation/src/: GoParametricTesselableVolume.C  GoParametricTessellableVolume.C  SimplePolyhedronTesselation.C  TriangleOctTree.C  basic_intersections.C  clip_grid.C  debug_tesselate.C  distance_function.C  distributeND.C  find_root.C  lu.C  make_curve_spacing_fun.C  make_triang_spacing_fun.C  parametric_curve_energy.C  parametric_surface_energy.C  polygon_energy.C  polyhedron_energy.C  tesselate_curve.C  tesselate_debug.C  tesselate_parametric_curve.C  tesselate_parametric_surface.C  tesselate_polyhedron.C  tesselate_surface.C  tessellate_parametric_curve.C  tessellate_parametric_surface.C  tessellate_polyhedron.C  triangulate_2D_manifold_in_3D.C  triangulate_domain.C  tritools.C
(+18 files in other folders)
